// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots should match snapshot 1`] = `
.c0 {
  width: 16px;
  height: 16px;
}

<div>
  <svg
    class="c0"
    fill="#231B22"
    height="16"
    width="16"
  >
    <circle
      cx="16"
      cy="16"
      r="16"
    />
  </svg>
</div>
`;

exports[`Snapshots should match snapshot with size prop 1`] = `
.c0 {
  width: 16px;
  height: 16px;
}

<div>
  <svg
    class="c0"
    fill="#231B22"
    height="16"
    width="16"
  >
    <circle
      cx="16"
      cy="16"
      r="16"
    />
  </svg>
</div>
`;

exports[`Snapshots should match snapshot with system props 1`] = `
.c0 {
  box-shadow: 0 5px 5px -3px rgba(152,152,166,0.2),0 8px 10px 1px rgba(152,152,166,0.14),0 3px 14px 2px rgba(152,152,166,0.12);
  margin: 20px;
  width: 16px;
  height: 16px;
}

<div>
  <svg
    class="c0"
    elevation="medium"
    fill="#231B22"
    height="16"
    margin="medium"
    width="16"
  >
    <circle
      cx="16"
      cy="16"
      r="16"
    />
  </svg>
</div>
`;
